[gd_scene load_steps=6 format=3 uid="uid://ch2qj55hknnpu"]

[ext_resource type="Script" uid="uid://b6frp08q1tp7g" path="res://scene_1.gd" id="1_1abo5"]
[ext_resource type="Texture2D" uid="uid://1f4dqjevg73p" path="res://ASSETS/BACKGROUND/Black Screen.png" id="1_3sd7o"]
[ext_resource type="PackedScene" uid="uid://bvk86aleyqoeq" path="res://character.tscn" id="3_kl852"]
[ext_resource type="PackedScene" uid="uid://cktub700ey4n4" path="res://dialogue_ui.tscn" id="3_knagl"]
[ext_resource type="Texture2D" uid="uid://dc2vlr2vbi7o3" path="res://ASSETS/BUTTONS/InGameSettingsButton.png" id="5_kl852"]

[node name="SCENE1" type="Node2D"]
script = ExtResource("1_1abo5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
scale = Vector2(0.975, 0.975)
transform = Transform2D(0.975, 0, 0, 0.975, 0, 0)

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = -1.0
offset_right = 1920.0
offset_bottom = 1079.0
scale = Vector2(1.005, 1.005)
texture = ExtResource("1_3sd7o")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Character" parent="CanvasLayer2/Control" instance=ExtResource("3_kl852")]
unique_name_in_owner = true
position = Vector2(1534, 546)
scale = Vector2(1.43, 1.43)

[node name="DialogueUI" parent="CanvasLayer2/Control" instance=ExtResource("3_knagl")]
unique_name_in_owner = true
layout_mode = 1

[node name="ForButton" type="CanvasLayer" parent="."]
layer = 2

[node name="TextureButton" type="TextureButton" parent="ForButton"]
offset_left = 1759.0
offset_top = -10.0
offset_right = 3807.0
offset_bottom = 1465.0
scale = Vector2(0.1, 0.1)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_kl852")

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[connection signal="pressed" from="ForButton/TextureButton" to="." method="_on_texture_button_pressed"]
